<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:minHeight="150dp"
    android:minWidth="400dp"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/add_info_tips_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_info_tips"
        android:textSize="16sp"
        android:layout_gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >

        <TextView
            android:id="@+id/add_info_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="20sp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            />

        <TextView
            android:id="@+id/add_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_info"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/blue"
            />

    </LinearLayout>



</LinearLayout>