<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--年检代办流程-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/new_color_primary"
                    android:text="@string/commission_title3"
                    />

                <ImageView
                    android:id="@+id/pack_up_iv3"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/category_iv_oneitem_arrow_up"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitCenter"
                    />
            </RelativeLayout>


        <LinearLayout
            android:id="@+id/process_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#606060"
                android:text="@string/commission9"
                android:layout_marginTop="10dp"
                />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#808080"
                    android:text="@string/commission8"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    />
        </LinearLayout>

        </LinearLayout>

</LinearLayout>