<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    android:id="@+id/account_change_psw2"
    android:padding="20dp"
    >

    <!--请输入验证码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        >

        <!--<ImageView-->
        <!--android:id="@+id/imgh"-->
        <!--android:layout_width="35dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:src="@drawable/yanzheng"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

        <com.example.youhe.youhecheguanjiaplus.widget.ClearEditText
            android:id="@+id/smscode_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_auth_code"
            style="@style/EditText"
            android:textColorHint="@color/new_color_primary"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/icon_yzm"
            android:textSize="16sp"
            android:drawablePadding="20dp"
            android:background="@color/lucency"
            android:inputType="number"
            />


        <com.example.youhe.youhecheguanjiaplus.widget.TimeButton
            android:id="@+id/time_btn"
            android:layout_centerVertical="true"
            android:onClick="yanZhenMa"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/affirmbutton3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text=""
            android:textSize="10sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="right"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_color_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/obligate_phonenum_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:text="预留号码："
        android:textSize="15sp"
        />

    <!--请输入密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!--<ImageView-->
        <!--android:layout_width="35dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:layout_marginLeft="40dp"-->
        <!--android:src="@drawable/keywork1" />-->

        <com.example.youhe.youhecheguanjiaplus.widget.ClearEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/edit_password2"
            style="@style/EditText"
            android:drawableLeft="@drawable/icon_psw"
            android:textSize="16sp"
            android:drawablePadding="20dp"
            android:textColorHint="@color/new_color_primary"
            android:background="@color/lucency"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_color_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        />

    <!--再次请输入密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.example.youhe.youhecheguanjiaplus.widget.ClearEditText
            android:id="@+id/password_again_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/edit_password3"
            style="@style/EditText"
            android:drawableLeft="@drawable/icon_psw"
            android:textSize="16sp"
            android:drawablePadding="20dp"
            android:textColorHint="@color/new_color_primary"
            android:background="@color/lucency"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/new_color_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/change_psw_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/affirmbutton3"
        android:text="确        定"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/erro_msg_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/zhuyi"
        android:drawablePadding="10dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        />


</LinearLayout>